fixed double jump

--- a/Scripts/Style.css
+++ b/Scripts/Style.css
@@ -3,3 +3,16 @@ canvas {
   display: block;
   margin: auto;
 }
+.body-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.game-container {
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
